<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Read4Me</string>
    <string name="read_lang_chooser">Choose the language you want to read</string>
    <string name="hear_lang_chooser">Choose the language you want to hear</string>
    <string name="button_send">Start</string>
    <string name="action_settings">Settings</string>

    <string-array name="lang_array">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Italian</item>
        <item>German</item>
        <item>Portuguese</item>
    </string-array>

    <string name="btn_realt">Read in real time</string>
    <string name="btn_loadp">Load Picture</string>
    <string name="btn_takepic">Take Picture</string>
    <string name="title_activity_menu">Choose your action</string>
    <string name="select_pic">Select Picture</string>
    <string name="title_activity_edit_pic">Edit Picture</string>
    <string name="photo_delete_prompt_title">Delete picture</string>
    <string name="photo_delete_prompt_message">Delete picture?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="photo_edit_chooser_title">Edit Picture</string>
    <string name="share">Share</string>
    <string name="photo_send_extra_subject">Subject</string>
    <string name="photo_send_extra_text">Message</string>
    <string name="photo_send_chooser_title">Share picture?</string>
    <string name="crop">Crop</string>
    <string name="read_text">Read</string>
    <string name="lang_read">lang_read</string>
    <string name="lang_hear">lang_hear</string>
    <string name="country_hear">country_hear</string>
    <string name="title_activity_tts">TTSActivity</string>
    <string name="title_activity_color_detect">Real Time Detection</string>
    <string name="title_activity_show_pic">Picture</string>
    <string name="gallery">Load Picture</string>
    <string name="tap2Start">Tap screen to start</string>
    <string name="retake_pic">Retake</string>
    <string name="close_pic">Close</string>
    <string name="accept_pic">Accept</string>
    <string name="lang2read">Language to read</string>
    <string name="lang2hear">Language to hear</string>
    <string name="change_lang">Change languages</string>
    <string name="rotate_pic">Rotate</string>
    <string name="no_internet">No internet connection</string>
</resources>
