<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.danielsierraf.read4me.EditPicActivity">

    <item
        android:id ="@+id/menu_delete"
        android:orderInCategory ="100"
        app:showAsAction ="ifRoom|withText"
        android:title ="@string/delete" />
    <item
        android:id="@+id/menu_crop"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/crop"/>
    <item
        android:id ="@+id/menu_edit"
        android:orderInCategory ="100"
        app:showAsAction ="ifRoom|withText"
        android:title ="@string/edit" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
